Formularios de carga

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,9 @@
         {% endblock %}
     </head>
     <body>
+    {% include 'sidebar.html.twig' %}
         <div class='container'>
+            
             {% block body %}{% endblock %}
         </div>
     </body>
