--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ path('incidente') }}">Incidentes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('reporte_equipo') }}">Reporte de Equipos</a>
+        </li>
       </ul>
     </div>
   </div>
