--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -24,6 +24,16 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ path('reporte_equipo') }}">Reporte de Equipos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('reporte_goles') }}">Reporte de Goles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('reporte_incidentes') }}">Reporte de Incidentes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('jugador') }}">Reporte de Jugador</a>
+        </li>
+        
       </ul>
     </div>
   </div>
