--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -31,7 +31,7 @@
           <a class="nav-link" href="{{ path('reporte_incidentes') }}">Reporte de Incidentes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('jugador') }}">Reporte de Jugador</a>
+          <a class="nav-link" href="{{ path('jugador') }}">Reporte de Jugadores</a>
         </li>
         
       </ul>
